--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="Névjegy">
+        <label for="vezeteknev">Vezetéknév</label>
+        <input type="text" id="vezeteknev" name="vezeteknev" placeholder="Vezetéknév">
+        <label for="keresztnev">Keresztnév</label>
+        <input type="text" id="keresztnev" name="keresztnev" placeholder="Keresztnév">
+        <label for="otthoni">Otthoni Telefonszám:</label>
+        <input type="number" name="" id="Otthoni" placeholder="Otthoni Telefonszám">
+        <label for="mobil">Mobil Telefonszám:</label>
+        <input type="number" name="" id="Mobil" placeholder="Mobil Telefonszám">
+        <label for="email">Email:</label>
+        <input type="email" name="email" id="email" placeholder="Email">
+        <label for="lakcím">Lakcím</label>
+        <input type="text" id="lakcím" name="lakcím" placeholder="Lakcím">
+        <label for="születési_dátum">Születési dátum</label>
+        <input type="date" id="születési_dátum" name="születési_dátum">
+        <label for="megjegyzés">Megjegyzés</label>
+        <textarea id="megjegyzés" name="megjegyzés" placeholder="Megjegyzés"></textarea>
+        <label for="csoport">Csoport:</label>
+        <input type="text" id="csoportneve" name="csoportneve" placeholder="Csoport Neve">
+        <label for="csoportleírás">Csoport Leírás:</label>
+        <input type="text" id="csoportleírás" name="csoportleírás" placeholder="Csoport Leírás">
+        <button id="gomb">Küldés</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
