--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 </head>
 <body>
     <div id="Névjegy">
-        <label for="vezeteknev">Vezetéknév</label>
-        <input type="text" id="vezeteknev" name="vezeteknev" placeholder="Vezetéknév">
-        <label for="keresztnev">Keresztnév</label>
-        <input type="text" id="keresztnev" name="keresztnev" placeholder="Keresztnév">
+        <label for="vezetéknév">Vezetéknév:</label>
+        <input type="text" id="vezetéknév" name="vezetéknév" placeholder="Vezetéknév">
+        <label for="keresztnév">Keresztnév:</label>
+        <input type="text" id="keresztnév" name="keresztnév" placeholder="Keresztnév">
         <label for="otthoni">Otthoni Telefonszám:</label>
-        <input type="number" name="" id="Otthoni" placeholder="Otthoni Telefonszám">
+        <input type="number" name="" id="otthoni" placeholder="Otthoni Telefonszám">
         <label for="mobil">Mobil Telefonszám:</label>
-        <input type="number" name="" id="Mobil" placeholder="Mobil Telefonszám">
+        <input type="number" name="" id="mobil" placeholder="Mobil Telefonszám">
         <label for="email">Email:</label>
         <input type="email" name="email" id="email" placeholder="Email">
-        <label for="lakcím">Lakcím</label>
+        <label for="lakcím">Lakcím:</label>
         <input type="text" id="lakcím" name="lakcím" placeholder="Lakcím">
-        <label for="születési_dátum">Születési dátum</label>
+        <label for="születési_dátum">Születési dátum:</label>
         <input type="date" id="születési_dátum" name="születési_dátum">
-        <label for="megjegyzés">Megjegyzés</label>
+        <label for="megjegyzés">Megjegyzés:</label>
         <textarea id="megjegyzés" name="megjegyzés" placeholder="Megjegyzés"></textarea>
         <label for="csoport">Csoport:</label>
         <input type="text" id="csoportneve" name="csoportneve" placeholder="Csoport Neve">
